fix: Small gap on sticky ask section

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -198,7 +198,7 @@ main > section {
 
 #answers {
 	width: 100%;
-	min-height: 5em;
+	min-height: 2em;
 	display: block;
 }
 
