--- a/src/styles/sticky.css
+++ b/src/styles/sticky.css
@@ -42,7 +42,7 @@
 
 .sticky-question-bar.is-sticky {
 	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-	top: 0;
+	top: -2px;
 	z-index: 100;
 	border-bottom: dashed 1px var(--color-primary);
 	transform: translateY(2px);
